--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/all.min.css">
   <link rel="stylesheet" href="css/normailze.Css">
@@ -73,7 +73,7 @@
           snippets in a few simple clicks.</p>
       </div>
       <div class="img">
-        <img src="/images/image-devices.png" alt="">
+        <img src="images/image-devices.png" alt="">
       </div>
     </div>
   </section>
@@ -111,27 +111,27 @@
       <div class="main-box">
         <div class="block">
           <div class="img">
-            <img src="/images/logo-google.png" alt="">
+            <img src="images/logo-google.png" alt="">
           </div>
         </div>
         <div class="block">
           <div class="img">
-            <img src="/images/logo-ibm.png" alt="">
+            <img src="images/logo-ibm.png" alt="">
           </div>
         </div>
         <div class="block">
           <div class="img">
-            <img src="/images/logo-microsoft.png" alt="">
+            <img src="images/logo-microsoft.png" alt="">
           </div>
         </div>
         <div class="block">
           <div class="img">
-            <img src="/images/logo-hp.png" alt="">
+            <img src="images/logo-hp.png" alt="">
           </div>
         </div>
         <div class="block">
           <div class="img">
-            <img src="/images/logo-vector-graphics.png" alt="">
+            <img src="images/logo-vector-graphics.png" alt="">
           </div>
         </div>
       </div>
@@ -176,9 +176,9 @@
         </div>
         <div class="block">
           <div class="social-media">
-            <img class="face" src="/images/icon-facebook.svg" alt="">
-            <img class="twitter" src="/images/icon-twitter.svg" alt="">
-            <img class="instagram" src="/images/icon-instagram.svg" alt="">
+            <img class="face" src="images/icon-facebook.svg" alt="">
+            <img class="twitter" src="images/icon-twitter.svg" alt="">
+            <img class="instagram" src="images/icon-instagram.svg" alt="">
           </div>
         </div>
       </div>
